<resources>
    <string name="app_name">PanquesitoXML</string>
    <string name="text_button">Pulsame</string>
    <string name="hola_mundo">Hola Mundo</string>
    <string name="full_name">Full Name</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="login_text">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="te_amo_3"><![CDATA[TE AMO >3]]></string>
    <string name="full_name_input">Full Name</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="txt_password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="privacy_policy_tv">By signing up, you´re agree to our terms and conditions and Privacy Policy</string>
    <string name="user_email_com">user@email.com</string>
    <string name="create_your_new_account">Create Your New Account</string>
    <string name="register">Register</string>
    <string name="register_activity">Register Activity</string>
    <string name="login_activity">Login Activity</string>
</resources>