<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/white"
            android:id="@+id/constraint_register"
            android:layout_width="match_parent"
            android:layout_margin="40dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_have_an_account"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginStart="@dimen/small_margin"
                android:text="@string/sign_up"
                android:textColor="@color/verde_planta"
                style="@style/PanquesitoXML.TextStyle.Link">
        </TextView>

        <TextView

                android:id="@+id/tv_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_sign_up"
                app:layout_constraintHorizontal_chainStyle="packed"
                style="@style/PanquesitoXML.TextStyle.Subtitle"
                android:text="@string/already_have_an_account" android:textColor="#546E7A">
        </TextView>

        <LinearLayout
                android:layout_marginBottom="@dimen/large_margin"
                android:layout_marginStart="@dimen/medium_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/social_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/tv_sign_up">

            <ImageButton
                    android:layout_margin="@dimen/large_margin"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_button"
                    android:contentDescription="@string/facebook"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:elevation="4dp"
                    android:src="@drawable/ic_facebook">
            </ImageButton>

            <ImageButton
                    android:layout_margin="@dimen/large_margin"
                    android:layout_gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_google"
                    android:background="@drawable/circle_button"
                    android:contentDescription="@string/google" 
                    tools:ignore="ImageContrastCheck">
            </ImageButton>

            <ImageButton
                    android:layout_margin="@dimen/large_margin"

                    android:layout_gravity="center"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/apple"
                    android:src="@drawable/ic_apple"
                    android:background="@drawable/circle_button">
            </ImageButton>
            
        </LinearLayout>

        <TextView
                android:id="@+id/tv_continue"
                app:layout_constraintBottom_toTopOf="@id/social_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_continue_with"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/PanquesitoXML.TextStyle.Subtitle"
                android:layout_marginBottom="@dimen/medium_margin"
                tools:ignore="TextContrastCheck">
        </TextView>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/medium_margin"
                app:layout_constraintTop_toTopOf="@id/tv_continue"
                app:layout_constraintBottom_toBottomOf="@id/tv_continue"
                app:layout_constraintEnd_toStartOf="@id/tv_continue"
                android:background="@color/color_subtitle"
                app:layout_constraintStart_toStartOf="parent">

        </View>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toTopOf="@id/tv_continue"
                app:layout_constraintBottom_toBottomOf="@id/tv_continue"
                app:layout_constraintStart_toEndOf="@id/tv_continue"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/color_subtitle"
                android:layout_marginStart="@dimen/medium_margin">
        </View>


        <CheckBox
                android:id="@+id/cb_captcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/large_margin"
                android:text="@string/privacy_policy_tv"
                style="@style/PanquesitoXML.TextStyle.Subtitle"
                app:layout_constraintBottom_toTopOf="@id/tv_continue">
        </CheckBox>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PanquesitoXML.Widget.Button"
                android:text="@string/Sign_Up"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/cb_captcha"
                android:layout_marginBottom="@dimen/medium_margin">
        </androidx.appcompat.widget.AppCompatButton>

        <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/background_et"
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextColor="@color/verde_planta"
                android:hint="@string/txt_password"
                app:passwordToggleEnabled="true"
                android:textColorHint="@color/verde_planta"
                android:layout_marginBottom="@dimen/large_margin"
                app:layout_constraintBottom_toTopOf="@id/btn_sign_up">
            <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/verde_planta"
                    android:background="@drawable/background_et"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/medium_text"
                    android:inputType="numberPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/background_et"
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/password_input"
                android:layout_marginBottom="@dimen/large_margin"
                android:hint="@string/user_email_com"
                app:hintTextColor="@color/verde_planta"
                android:textColorHint="@color/verde_planta"
                app:endIconMode="clear_text"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/verde_planta"
                    android:background="@drawable/background_et"
                    android:inputType="textPersonName"
                    android:id="@+id/email_tv"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/medium_text"
                    android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:background="@drawable/background_et"
                android:id="@+id/full_name_input"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toTopOf="@id/email_input"
                android:layout_marginBottom="@dimen/large_margin"
                android:hint="@string/full_name_input"
                app:hintTextColor="@color/verde_planta"
                android:textColorHint="@color/verde_planta"
                app:endIconMode="clear_text"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:textColor="@color/verde_planta"
                    android:background="@drawable/background_et"
                    android:inputType="textPersonName"
                    android:id="@+id/full_name_edt"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/medium_text"
                    android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="match_parent"
                android:textAlignment="center"
                style="@style/PanquesitoXML.TextStyle.Subtitle"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/full_name_input"
                android:text="@string/create_your_new_account"
                android:layout_marginBottom="@dimen/large_margin">
        </TextView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/tv_create_account"
                android:textAlignment="center"
                android:textColor="@color/verde_planta"
                android:text="@string/register"
                style="@style/PanquesitoXML.TextStyle.Title"
                android:layout_marginBottom="@dimen/medium_margin">
        </TextView>









        






    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>